<resources>
    <string name="app_name">ProyectoLavanderia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Invitado</string>
    <string name="nav_header_subtitle">Usuario.Invitado@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_servicio">Productos/Servicios</string>
    <string name="menu_reclamo">Reclamos</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_logout">Salir</string>

    <string name="button_label_enabled">Send</string>
    <string name="button_label_disabled">Send22</string>
    <string name="unelevated_button_label_enabled">prueba</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_facebook">Ingresar con Facebook</string>
    <string name="action_sign_in_google">Ingresar con Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Ingrese un Email</string>
    <string name="invalid_password">Como minimo 5 caracteres</string>
    <string name="login_failed">"Algo salio  mal!"</string>


    <string name="titulo_buscador">"¿Dónde recogemos tu ropa?"</string>
    <string name="hint_buscar">"Introduce tu direccion completa"</string>
    <string name="btnBuscar">"Buscar"</string>


</resources>
